<resources>
    <string name="app_name">Team Up</string>

    <string name="progress_dialog_wait">Please Wait</string>
    <string name="progress_dialog_exit">Press Again To Exit</string>

    <string name="alert_dialog_positive_btn_text">Okay</string>

    <string name="toast_exit">Please Click Back Again To Exit</string>
    <string name="toast_account_creation_successful">Account Created Successfully</string>
    <string name="toast_permission_denied">Permission Denied, Allow It From Settings</string>
    <string name="toast_task_list_empty_name">Task List Name Can\'t Be Empty</string>
    <string name="toast_card_empty_name">Card Name Can\'t Be Empty</string>

    <string name="content_description_profile_picture">Profile Picture</string>

    <string name="missing_field_name">Name can\'t be empty.</string>
    <string name="missing_field_email">Email can\'t be empty.</string>
    <string name="missing_field_password">Password can\'t be empty.</string>

    <string name="incorrect_field_name">Name not in correct format.</string>
    <string name="incorrect_field_email">Email not in correct format.</string>

    <string name="intro_screen_heading">Let\'s Get Started</string>
    <string name="intro_screen_body">Maximize Productivity\nStreamline Workflow\nStay Organized</string>
    <string name="intro_screen_sign_in">Sign In</string>
    <string name="intro_screen_sign_up">Sign Up</string>

    <string name="sign_up_screen_heading">Enter Your Details To Create Account &amp; Register With Us</string>
    <string name="sign_up_screen_name">Name</string>
    <string name="sign_up_screen_email">Email</string>
    <string name="sign_up_screen_password">Password</string>
    <string name="sign_up_screen_create_account">Create Account</string>
    <string name="sign_up_screen_toolbar_title">Sign Up</string>

    <string name="sign_in_screen_heading">Enter Your Details To Log In</string>
    <string name="sign_in_screen_email">Email</string>
    <string name="sign_in_screen_password">Password</string>
    <string name="sign_in_screen_create_account">Sign In</string>
    <string name="sign_in_screen_toolbar_title">Sign In</string>

    <string name="profile_screen_name">Name</string>
    <string name="profile_screen_email">Email</string>
    <string name="profile_screen_description">Description</string>
    <string name="profile_screen_update_account">Update</string>
    <string name="profile_screen_toolbar_title">Edit Profile</string>

    <string name="create_board_screen_toolbar_title">Create Board</string>
    <string name="create_board_screen_board_name">Board Name</string>
    <string name="create_board_screen_create_board_button">Create Board</string>

    <string name="task_list_screen_add_list">Add List</string>
    <string name="task_list_screen_add_card">Add Card</string>
    <string name="task_list_screen_task_list_name_hint">Task List Name</string>
    <string name="task_list_screen_card_name_hint">Card Name</string>

    <string name="member_list_screen_title">Members</string>
    <string name="member_list_screen_add_members">Add Members</string>

    <string name="search_dialog_title">Search Members</string>
    <string name="search_dialog_hint">Enter Email To Search</string>
    <string name="search_dialog_search_button_text">Add</string>
    <string name="search_dialog_cancel_button_text">Cancel</string>

    <string name="member_not_found_text">No Such Member Found</string>

    <string name="main_content_board_availability">No Boards Available</string>

    <string name="nav_drawer_profile_title">My Profile</string>
    <string name="nav_drawer_sign_out_title">Sign Out</string>
</resources>