<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IntroActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/cgScreenMiddle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/cgScreenMiddle"
        android:gravity="center_horizontal">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/tvTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="@dimen/app_secondary_margin"
            android:src="@drawable/app_icon"
            android:elevation="0dp"
            app:tint="@color/app_dark_blue"/>

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/cgScreenMiddle"
            android:text="@string/app_name"
            android:textColor="@color/app_dark_blue"
            android:textStyle="bold"
            android:textSize="@dimen/intro_screen_title_text_size"
            android:fontFamily="@font/alegreya_sans"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_screen_heading"
            android:textSize="@dimen/intro_screen_heading_text_size"
            android:textColor="@color/app_primary_text_color"
            android:fontFamily="@font/alegreya_sans"
            android:layout_marginBottom="@dimen/app_secondary_margin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/intro_screen_body"
            android:textSize="@dimen/intro_screen_body_text_size"
            android:textAlignment="center"
            android:fontFamily="@font/alegreya_sans"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="@dimen/app_primary_margin"
        android:layout_marginBottom="@dimen/app_primary_margin">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignIn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/app_primary_margin"
            android:text="@string/intro_screen_sign_in"
            android:textSize="@dimen/intro_screen_body_text_size"
            android:fontFamily="@font/alegreya_sans"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:background="@drawable/app_primary_button"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/intro_screen_sign_up"
            android:textSize="@dimen/intro_screen_body_text_size"
            android:fontFamily="@font/alegreya_sans"
            android:textStyle="bold"
            android:textColor="@color/app_dark_blue"
            android:stateListAnimator="@null"
            android:elevation="0dp"
            android:background="@drawable/app_secondary_button"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>