<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/app_secondary_margin"
    app:cardCornerRadius="@dimen/app_button_radius"
    android:background="@color/white">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/app_secondary_margin"
            android:layout_marginHorizontal="@dimen/app_secondary_margin"
            android:textColor="@color/app_primary_text_color"
            android:textSize="@dimen/search_dialog_primary_text_size"
            android:fontFamily="@font/alegreya_sans"
            android:text="@string/search_dialog_title"
            android:textStyle="bold"/>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitle"
            android:layout_marginTop="@dimen/app_secondary_margin"
            android:background="@color/app_secondary_text_color"/>

        <EditText
            android:id="@+id/etEmailInput"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/divider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/app_secondary_margin"
            android:layout_marginHorizontal="@dimen/app_secondary_margin"
            android:hint="@string/search_dialog_hint"
            android:textSize="@dimen/search_dialog_primary_text_size"
            android:textColor="@color/app_secondary_text_color"
            android:fontFamily="@font/alegreya_sans"/>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/clgMidLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clSearch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/clgMidLine"
            app:layout_constraintTop_toBottomOf="@id/etEmailInput"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_margin="@dimen/app_secondary_margin"
            android:background="@drawable/app_primary_button">

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="@dimen/app_secondary_margin"
                android:text="@string/search_dialog_search_button_text"
                android:textSize="@dimen/search_dialog_secondary_text_size"
                android:fontFamily="@font/alegreya_sans"
                android:textStyle="bold"
                android:textColor="@color/white"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/etEmailInput"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/clgMidLine"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="@dimen/app_secondary_margin"
            android:background="@drawable/app_secondary_button">

            <TextView
                android:id="@+id/tvCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginVertical="@dimen/app_secondary_margin"
                android:text="@string/search_dialog_cancel_button_text"
                android:textSize="@dimen/search_dialog_secondary_text_size"
                android:fontFamily="@font/alegreya_sans"
                android:textStyle="bold"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>